syntax = "proto3";

option csharp_namespace = "Proto.Command.Notes";

import "DTO/trace_data.proto";

import "google/protobuf/timestamp.proto";

service NoteCommandProtoService {
  rpc CreateNote (CreateNoteCommandProto) returns (CommandResponse);
  rpc UpdateNote (UpdateNoteCommandProto) returns (CommandResponse);
}

message CreateNoteCommandProto {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string ticketId = 4;
  string timeSlotId = 5;
  google.protobuf.Timestamp timeStamp = 6;
  TraceDataProto traceData = 7;
}

message UpdateNoteCommandProto {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  TraceDataProto traceData = 5;
}

message CommandResponse {
  bool success = 1;
}
