syntax = "proto3";

import "DTO/note.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.Notes";

message GetNotesByTicketIdRequestProto {
  string ticket_id = 1;
  TraceDataProto traceData = 2;
}

message GetNotesByTimeSlotIdRequestProto {
  string time_slot_id = 1;
  TraceDataProto traceData = 2;
}

message GetNotesResponseProto {
  repeated NoteProto notes = 1;
}

service NotesRequestService {
  rpc GetNotesByTicketId(GetNotesByTicketIdRequestProto) returns (GetNotesResponseProto);
  rpc GetNotesByTimeSlotId(GetNotesByTimeSlotIdRequestProto) returns (GetNotesResponseProto);
}
